# Phase-separation-patterned-ground

./: README.md
Model 2/: clStone_ice_model2Q1_S0_Lambda_De(SH)_OneKernel_DivGradSemilogV2.ipynb
Models with Quadratic speed/: clStone_Model1_Pattern_Quadratic-function_OneKernel_DivGrad.ipynb  clStone_Model2_Pattern_Quadratic-function_OneKernel_DivGrad.ipynb  clStone_Model_Patterns_Quadratic-function_OneKernel_DivGrad.ipynb
OpenCL_M1/: CMakeLists.txt  Computing_Kernel.cl  Device_Utilities.cpp  Device_Utilities.h  FindOpenCL.cmake  Main_Program.cpp  Plot_Patterns.m  Settings_and_Parameters.h  SpatialFunctions.cl
Py_OpenCL/Model 1/: clStone_Model1_Patterns_De(S)_OneKernel_DivGrad.ipynb  clStone_Model1_S0_Lambda_De(SH)_OneKernel_DivGradSemilog.ipynb  clStone_Model1_Striped_Patterns_De(S)_OneKernel_DivGrad.ipynb
Py_OpenCL/Model 2/: clStone_ice_Model2Q1_Pattern_De(SH)_OneKernel_DivGradV2.ipynb  clStone_ice_Model2Q1_S0_Beta_De(SH)_OneKernel_DivGradSemilogV2.ipynb  clStone_ice_Model2Q1_Stripped_pattern_De(SH)_OneKernel_DivGradV2.ipynb
Theoretical_spinodal_lines/: Spinodal_plot_M1.m  Spinodal_plot_M2.m
